--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#"><img src="img/logo.png" alt="PAEA logo"</a>
+      <h1 class="sr-only">PAEA 2016 Stakeholder Summit</h1>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,7 +59,7 @@
       				<li>30 Industry Leaders</li>
       			</ul>
             <div class="col-xs-10 col-sm-10 col-xs-offset-1 col-sm-offset-1 page-subtitle">
-      			 <p>A convening of thought leaders and innovators to identify essential knowledge, skills and behaviors required of the <span class="accented_text">PA workforce in the future </span></p>
+      			 <h2>A convening of thought leaders and innovators to identify essential knowledge, skills and behaviors required of the <span class="accented_text">PA workforce in the future </span></h2>
             </div>
             <div class="hero_btn_group">
       			 <a class="btn btn-primary btn-lg hero_btn" href="#" role="button">Video: Our Initiatives</a>
@@ -67,6 +68,43 @@
       		</div> <!-- END ROW -->
       	</div> <!-- END CONTAINER -->
       </div> <!-- END JUMBOTRON -->
+
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="grid">
+             <div class="grid-item after-summit-block">
+              <p>What happens <span class="accented_text white_text">after the summit?</span></p>
+            </div>
+            <div class="grid-item logistics-block">
+              <p><span class="accented_text">The venue</span> &amp; summit logistics</p>
+            </div>
+            <div class="grid-item grid-item--lg-square" id="about-block">
+                <h3>About the Summit</h3>
+                <p>The Physicians Assistant Education Association (PAEA) is hosting a two-day summit to bring together a variety of key stakeholders in the health care sector. Our goal? To ensure that competencies for physician assistant graduates are relevant to the needs of the health care workforce today and in the future.</p>
+                <a class="btn btn-primary btn-lg about-block-button" href="about.html" role="button">About the Summit
+
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              viewBox="0 0 43 10" enable-background="new 0 0 43 10" xml:space="preserve">
+              <g>
+              <g>
+              <line fill="none" stroke="#f1f2f2" stroke-width="2" stroke-miterlimit="10" x1="1.8" y1="5.2" x2="38.3" y2="5.2"/>
+              <g>
+              <polygon points="31.7,13.4 30.3,11.9 37.5,5.2 30.3,-1.5 31.7,-3 40.4,5.2      "/>
+              </g>
+              </g>
+              </g>
+              </svg>
+                </a>
+            </div>
+             <div class="grid-item grid-item--rectangle discussion-block">
+              <h3>Join the Discussion</h3>
+              <p>What is the most important aspect of PA education?</p>
+            </div>
+            </div> <!-- END GRID -->
+          </div> <!-- END ROW -->
+        </div> <!-- END CONTAINER -->
+      </section>
 
 
 		</main>
@@ -107,5 +145,7 @@
 	<!-- SCRIPTS -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>	
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.1/isotope.pkgd.js"></script>
+  <script src="main.js"></script>
 	</body>
 </html>
