homepage styles except some assets

--- a/index.html
+++ b/index.html
@@ -73,12 +73,6 @@
         <div class="container">
           <div class="row">
             <div class="grid">
-             <div class="grid-item after-summit-block">
-              <p>What happens <span class="accented_text white_text">after the summit?</span></p>
-            </div>
-            <div class="grid-item logistics-block">
-              <p><span class="accented_text">The venue</span> &amp; summit logistics</p>
-            </div>
             <div class="grid-item grid-item--lg-square" id="about-block">
                 <h3>About the Summit</h3>
                 <p>The Physicians Assistant Education Association (PAEA) is hosting a two-day summit to bring together a variety of key stakeholders in the health care sector. Our goal? To ensure that competencies for physician assistant graduates are relevant to the needs of the health care workforce today and in the future.</p>
@@ -97,13 +91,62 @@
               </svg>
                 </a>
             </div>
-             <div class="grid-item grid-item--rectangle discussion-block">
+             <a href="discussion.html"><div class="grid-item grid-item--rectangle discussion-block">
               <h3>Join the Discussion</h3>
               <p>What is the most important aspect of PA education?</p>
+            </div></a>
+            <a href=""><div class="grid-item after-summit-block">
+              <p>What happens <span class="accented_text white_text">after the summit?</span></p>
+            </div></a>
+            <a href=""><div class="grid-item logistics-block">
+              <p><span class="accented_text">The venue</span> &amp; summit logistics</p></a>
             </div>
             </div> <!-- END GRID -->
           </div> <!-- END ROW -->
         </div> <!-- END CONTAINER -->
+      </section>
+      <section class="video-section">
+        <div class="container">
+          <div class="row">
+            <div class="video-container">
+              <a href=""><div class="col-sm-6 video-caption">
+                <p>Explore the intesection between the summit and our initiatives.</p>
+            </div></a>
+          </div>
+        </div>
+      </section>
+      <section class="twitter-feed">
+        <div class="container">
+          <div class="row">
+            <h3>What you're saying about the summit</h3>
+            <div class="grid">
+              <div class="grid-item grid-item--rectangle twitter-block">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget scelerisque ipsum. Aenean vulputate lacus bibendum ligula suscipit fringilla.<span class="hashtag"> #PAEASummit16</span></p>
+                <h4 class="twitter-handle">@ThatTwitterUser</h4>
+                <span class="vertical_divider"></span>
+                <h4>4 hours ago</h4>
+              </div>
+              <div class="grid-item grid-item--rectangle twitter-block">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget scelerisque ipsum. Aenean vulputate lacus bibendum ligula suscipit fringilla.<span class="hashtag"> #PAEASummit16</span></p>
+                <h4 class="twitter-handle">@ThatTwitterUser</h4>
+                <span class="vertical_divider"></span>
+                <h4>1 day ago</h4>
+              </div>
+              <div class="grid-item grid-item--rectangle twitter-block">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Te occidere possunt sed te edere non possunt nefas est. <span class="hashtag"> #PAEASummit16</span></p>
+                <h4 class="twitter-handle">Jane Doe, PA Practitioner</h4>
+              </div>
+              <div class="grid-item grid-item--rectangle twitter-block">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget scelerisque ipsum. Aenean vulputate lacus bibendum ligula suscipit fringilla. Cogito ergo sum. <span class="hashtag"> #PAEASummit16</span></p>
+                <h4 class="twitter-handle">@ThatTwitterUser</h4>
+                <span class="vertical_divider"></span>
+                <h4>3 days ago</h4>
+              </div>
+              
+
+            </div>
+          </div>
+        </div> 
       </section>
 
 
@@ -111,12 +154,12 @@
 		<footer>
 			 <div class="container">
     <div class="row email-sign-up">
-      <div class="col-xs-12 col-sm-6">
+      <div class="col-sm-12">
         <h4 class="hidden-xs hidden-sm hidden-md">Want to find out how you can be involved in the summit?</h4>
         <h2 class="hidden-xs hidden-sm hidden-md">Sign up for future summit updates</h2>
         <h2 class="visible-xs visible-sm visible-md">Sign up for summit updates</h2>
       </div>
-      <div class="col-xs-12 col-sm-6">
+      <div class="col-sm-12">
         <form action="//paeaonline.us5.list-manage.com/subscribe/post?u=c1336de511800dd633b850bd9&id=66efaba916" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div class="input-group">
             <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="joe@website.com">
@@ -130,13 +173,13 @@
     </div> <!-- end row -->
   </div> <!-- end container -->
 
-  <div class="bottom-divider"></div>
+  <div class="bottom_divider"></div>
     <div class="container">
       <div class="row">
         <ul>
           <li>&copy; Physicians Assistant Education Association (PAEA)</li>
-          <li>655 K Street NW, Suite 700, Washington, DC 20001-2385</li>
           <li class="hidden-xs hidden-sm"><a href="emailto:stakeholdersummit@paeaonline.org">stakeholdersummit@paeaonline.org</a></li>
+          <li><a href="">Frequently Asked Questions</a></li>
         </ul>
       </div>
     </div> <!-- end container -->
