refactored infographic section

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="about.html">About the Summit</a></li>
+        <li><a href="about.html" id="active_page">About the Summit</a></li>
          <li><a href="attendees.html">For attendees</a></li>
          <li><a href="schedule.html">Schedule</a></li>
          <li><a href="duscussion.html">Join the Discussion</a></li>
@@ -54,23 +54,21 @@
             <h3>Why this? Why now?</h3>
             <p>Lorem ipsum dolor sit amet, at reque nemore nec, ad quem contentiones mea, iudico invenire ocurreret mea an. Eum eu ullum equidem deseruisse. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi, augue veritus an sea. Vix ex prima nostrum posidonium, eum error libris ex, vis ex hinc lorem. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi.</p>
           </div>
-          <div class="col-sm-5 col-sm-offset-1 graphic-placeholder">
-          </div>
-          <div class="col-sm-5 graphic-caption caption-right">
-            <h3>To Communicate</h3>
-            <p>To gain an understanding of what patients, families, and communities need from health care providers so educators can prepare students for success today and in the future.</p>
-          </div>
-          <div class="col-sm-5 col-sm-offset-1 graphic-caption caption-left">
-            <h3>To Collaborate</h3>
-            <p>To gain an understanding of what patients, families, and communities need from health care providers so educators can prepare students for success today and in the future.</p>
-          </div>
-          <div class="col-sm-5 graphic-placeholder">
-          </div>
-          <div class="col-sm-5 col-sm-offset-1 graphic-placeholder">
-          </div>
-          <div class="col-sm-5 graphic-caption caption-right">
-            <h3>To Innovate</h3>
-            <p>To gain an understanding of what patients, families, and communities need from health care providers so educators can prepare students for success today and in the future.</p
+          <div class="grid">
+            <div class="grid-item grid-item--sm-rectangle left-margin graphic-placeholder"></div>
+            <div class="grid-item grid-item--long right-margin graphic-caption">
+                <h3>To Communicate</h3>
+                <p>To gain an understanding of what patients, families, and communities need from health care providers so educators can prepare students for success today and in the future.</p>
+            </div>
+             <div class="grid-item grid-item--long left-margin graphic-caption">
+                <h3>To Collaborate</h3>
+                <p>To gain an understanding of what patients, families, and communities need from health care providers so educators can prepare students for success today and in the future.</p>
+             </div>
+            <div class="grid-item grid-item--sm-rectangle right-margin graphic-placeholder"></div>
+            <div class="grid-item grid-item--sm-rectangle left-margin graphic-placeholder"></div>
+            <div class="grid-item grid-item--long right-margin graphic-caption">
+              <h3>To Innovate</h3>
+              <p>To gain an understanding of what patients, families, and communities need from health care providers so educators can prepare students for success today and in the future.</p>
           </div>
         </div> <!-- END ROW -->
       </div> <!-- END CONTAINER -->
