--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         <li><a href="about.html" id="active_page">About the Summit</a></li>
          <li><a href="attendees.html">For attendees</a></li>
          <li><a href="schedule.html">Schedule</a></li>
-         <li><a href="duscussion.html">Join the Discussion</a></li>
+         <li><a href="discussion.html">Join the Discussion</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
