--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img src="img/logo.png" alt="PAEA logo"</a>
+      <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="PAEA logo"</a>
       <h1 class="sr-only">PAEA 2016 Stakeholder Summit</h1>
     </div>
 
