added assets and adjusted styles

--- a/about.html
+++ b/about.html
@@ -56,18 +56,24 @@
             <p>Lorem ipsum dolor sit amet, at reque nemore nec, ad quem contentiones mea, iudico invenire ocurreret mea an. Eum eu ullum equidem deseruisse. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi, augue veritus an sea. Vix ex prima nostrum posidonium, eum error libris ex, vis ex hinc lorem. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi.</p>
           </div>
           <div class="grid">
-            <div class="grid-item grid-item--sm-rectangle left-margin graphic-placeholder"></div>
-            <div class="grid-item grid-item--long right-margin graphic-caption">
+            <div class="grid-item grid-item--sm-rectangle left-margin graphic-placeholder">
+              <img src="img/icon_collaborate@2x.jpg" alt="">
+            </div>
+            <div class="grid-item grid-item--long right-margin graphic-caption" id="collaborate">
                 <h3>To Communicate</h3>
                 <p>To gain an understanding of what patients, families, and communities need from health care providers so educators can prepare students for success today and in the future.</p>
             </div>
-             <div class="grid-item grid-item--long left-margin graphic-caption">
+             <div class="grid-item grid-item--long left-margin graphic-caption" id="educate">
                 <h3>To Collaborate</h3>
-                <p>To gain an understanding of what patients, families, and communities need from health care providers so educators can prepare students for success today and in the future.</p>
-             </div>
-            <div class="grid-item grid-item--sm-rectangle right-margin graphic-placeholder"></div>
-            <div class="grid-item grid-item--sm-rectangle left-margin graphic-placeholder"></div>
-            <div class="grid-item grid-item--long right-margin graphic-caption">
+                <p>To gain an understanding of what patients, families, and communities need from health care providers so  educators can prepare students for success today and in the future.</p>
+             </div> 
+            <div class="grid-item grid-item--sm-rectangle right-margin graphic-placeholder">
+               <img src="img/icon_educate@2x.jpg" alt=""> 
+            </div>
+            <div class="grid-item grid-item--sm-rectangle left-margin graphic-placeholder">
+              <img src="img/icon_innovate@2x.jpg" alt="">
+            </div>
+            <div class="grid-item grid-item--long right-margin graphic-caption" id="innovate">
               <h3>To Innovate</h3>
               <p>To gain an understanding of what patients, families, and communities need from health care providers so educators can prepare students for success today and in the future.</p>
           </div>
@@ -93,9 +99,18 @@
             <h3>PAEA's Objectives &amp; Initiatives</h3>
             <p>Lorem ipsum dolor sit amet, at reque nemore nec, ad quem contentiones mea, iudico invenire ocurreret mea an. Eum eu ullum equidem deseruisse. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi.</p>
             <a class="btn btn-default hidden-xs hidden-sm pdf-button" href="" role="button"><span class="resource-type">PDF</span>
-            <h4 id="button-text">2015 PAEA Initiatives</h4><div class="right-arrow"></div></a>
+            <h4 id="button-text">2015 PAEA Initiatives</h4><div class="down-arrow">
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-13 -7.3 16.4 25.3" enable-background="new -13 -7.3 16.4 25.3" xml:space="preserve">
+                <polygon fill="#939598" points="1.9,7.8 -3.8,14 -3.8,-7.3 -5.8,-7.3 -5.8,14 -11.5,7.8 -13,9.2 -4.8,18 3.4,9.2 "/>
+            </svg>
+            </div></a>
             <a class="btn btn-default hidden-xs hidden-sm pdf-button" href="" role="button"><span class="resource-type">PDF</span>
-            <h4 id="button-text">2015 Summit Questionnaire &amp; Survey</h4><div class="right-arrow"></div></a>  
+            <h4 id="button-text">2015 Summit Questionnaire &amp; Survey</h4><div class="down-arrow">
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-13 -7.3 16.4 25.3" enable-background="new -13 -7.3 16.4 25.3" xml:space="preserve">
+               <polygon fill="#939598" points="1.9,7.8 -3.8,14 -3.8,-7.3 -5.8,-7.3 -5.8,14 -11.5,7.8 -13,9.2 -4.8,18 3.4,9.2 "/>
+            </svg>
+
+          </div></a>  
           </div>
         </div>
       </div>   
