--- a/discussion.html
+++ b/discussion.html
@@ -77,17 +77,10 @@
 							</div>
 							<div class="col-sm-2">
 								<a href="discussionDetail.html">
-								<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-              viewBox="0 0 43 10" enable-background="new 0 0 43 10" xml:space="preserve">
-              	<g>
-              		<g>
-              			<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="1.8" y1="5.2" x2="38.3" y2="5.2"/>
-              				<g>
-              					<polygon points="31.7,13.4 30.3,11.9 37.5,5.2 30.3,-1.5 31.7,-3 40.4,5.2      "/>
-              				</g>
-              		</g>
-              	</g>
-              </svg></a>
+									 <svg version="1.1" id="right-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="-2 -3.4 38.6 16.4" enable-background="new -2 -3.4 38.6 16.4" xml:space="preserve">
+                  <polygon fill="" points="27.8,-3.4 26.5,-1.9 32.6,3.8 -2,3.8 -2,5.8 32.6,5.8 26.5,11.5 27.8,13 36.6,4.8 "/>
+                </svg>
+								</a>
 							</div>
 						</section>
 				</div>
@@ -112,17 +105,9 @@
 							</div>
 							<div class="col-sm-2">
 								<a href="discussionDetail.html">
-									<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	              viewBox="0 0 43 10" enable-background="new 0 0 43 10" xml:space="preserve">
-	              	<g>
-	              		<g>
-	              			<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="1.8" y1="5.2" x2="38.3" y2="5.2"/>
-	              				<g>
-	              					<polygon points="31.7,13.4 30.3,11.9 37.5,5.2 30.3,-1.5 31.7,-3 40.4,5.2      "/>
-	              				</g>
-	              		</g>
-	              	</g>
-	              </svg>
+									 <svg version="1.1" id="right-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="-2 -3.4 38.6 16.4" enable-background="new -2 -3.4 38.6 16.4" xml:space="preserve">
+                  <polygon fill="" points="27.8,-3.4 26.5,-1.9 32.6,3.8 -2,3.8 -2,5.8 32.6,5.8 26.5,11.5 27.8,13 36.6,4.8 "/>
+                </svg>
             	</a>
 							</div>
 						</section>
@@ -148,17 +133,9 @@
 							</div>
 							<div class="col-sm-2">
 								<a href="discussionDetail.html">
-									<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	              viewBox="0 0 43 10" enable-background="new 0 0 43 10" xml:space="preserve">
-	              	<g>
-	              		<g>
-	              			<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="1.8" y1="5.2" x2="38.3" y2="5.2"/>
-	              				<g>
-	              					<polygon points="31.7,13.4 30.3,11.9 37.5,5.2 30.3,-1.5 31.7,-3 40.4,5.2      "/>
-	              				</g>
-	              			</g>
-	              		</g>
-	              	</svg>
+									 <svg version="1.1" id="right-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="-2 -3.4 38.6 16.4" enable-background="new -2 -3.4 38.6 16.4" xml:space="preserve">
+                  <polygon fill="" points="27.8,-3.4 26.5,-1.9 32.6,3.8 -2,3.8 -2,5.8 32.6,5.8 26.5,11.5 27.8,13 36.6,4.8 "/>
+                </svg>
            		 	</a>
 							</div>
 						</section>
@@ -184,17 +161,9 @@
 							</div>
 							<div class="col-sm-2">
 								<a href="discussionDetail.html">
-									<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	              viewBox="0 0 43 10" enable-background="new 0 0 43 10" xml:space="preserve">
-	              	<g>
-	              		<g>
-	              			<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="1.8" y1="5.2" x2="38.3" y2="5.2"/>
-	              				<g>
-	              					<polygon points="31.7,13.4 30.3,11.9 37.5,5.2 30.3,-1.5 31.7,-3 40.4,5.2      "/>
-	              				</g>
-	              		</g>
-	              	</g>
-	              </svg>
+									 <svg version="1.1" id="right-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="-2 -3.4 38.6 16.4" enable-background="new -2 -3.4 38.6 16.4" xml:space="preserve">
+                  <polygon fill="" points="27.8,-3.4 26.5,-1.9 32.6,3.8 -2,3.8 -2,5.8 32.6,5.8 26.5,11.5 27.8,13 36.6,4.8 "/>
+                </svg>
             	</a>
 							</div>
 						</section>
