--- a/about.html
+++ b/about.html
@@ -56,27 +56,34 @@
             <p>Lorem ipsum dolor sit amet, at reque nemore nec, ad quem contentiones mea, iudico invenire ocurreret mea an. Eum eu ullum equidem deseruisse. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi, augue veritus an sea. Vix ex prima nostrum posidonium, eum error libris ex, vis ex hinc lorem. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi.</p>
           </div>
           <div class="grid">
-            <div class="grid-item grid-item--sm-rectangle left-margin graphic-placeholder">
-              <img src="img/icon_collaborate@2x.jpg" alt="">
-            </div>
-            <div class="grid-item grid-item--long right-margin graphic-caption" id="collaborate">
+            <div class="infographic-section">
+              <div class="left-margin graphic-placeholder">
+              <img src="img/icon_collaborate@2x.jpg" alt="" id="communicate">
+              </div>
+               <div class="right-margin graphic-caption" id="communicate-caption">
                 <h3>To Communicate</h3>
                 <p>To gain an understanding of what patients, families, and communities need from health care providers so educators can prepare students for success today and in the future.</p>
+              </div>
             </div>
-             <div class="grid-item grid-item--long left-margin graphic-caption" id="educate">
+            <div class="infographic-section">
+             <div class="left-margin graphic-caption">
                 <h3>To Collaborate</h3>
                 <p>To gain an understanding of what patients, families, and communities need from health care providers so  educators can prepare students for success today and in the future.</p>
              </div> 
-            <div class="grid-item grid-item--sm-rectangle right-margin graphic-placeholder">
-               <img src="img/icon_educate@2x.jpg" alt=""> 
+            <div class="right-margin graphic-placeholder">
+               <img src="img/icon_educate@2x.jpg" alt="" id="educate"> 
             </div>
-            <div class="grid-item grid-item--sm-rectangle left-margin graphic-placeholder">
-              <img src="img/icon_innovate@2x.jpg" alt="">
+          </div> <!-- end testing -->
+        <div class="infographic-section">
+            <div class="left-margin graphic-placeholder">
+              <img src="img/icon_innovate@2x.jpg" alt="" id="innovate">
             </div>
-            <div class="grid-item grid-item--long right-margin graphic-caption" id="innovate">
+            <div class="right-margin graphic-caption">
               <h3>To Innovate</h3>
               <p>To gain an understanding of what patients, families, and communities need from health care providers so educators can prepare students for success today and in the future.</p>
           </div>
+        </div>
+        </div> <!-- end testing -->
         </div> <!-- END ROW -->
       </div> <!-- END CONTAINER -->
     </section>
