refactored attendees page

--- a/attendees.html
+++ b/attendees.html
@@ -66,8 +66,8 @@
       	<div class="container">
       		<div class="row">
       				<!-- NO .GRID REMOVES MARGINS -->
-      				<div class="grid-item grid-item--sm-square left-margin graphic-placeholder"></div>
-      				<div class="grid-item grid-item--sm-square right-margin graphic-caption">
+      				<div class="grid-item grid-item--sm-square"></div>
+      				<div class="grid-item grid-item--sm-square">
       					<h3>The Venue &amp; Accommodations</h3>
       					<p>Lorem ipsum dolor sit amet, at reque nemore nec, ad quem contentiones mea, iudico invenire ocurreret mea an. Eum eu ullum equidem deseruisse. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi, augue veritus an sea. Vix ex prima nostrum posidonium, eum error libris ex, vis ex hinc lorem. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi.</p>
    						</div>
@@ -103,9 +103,16 @@
             <h3>Resources for Attendees</h3>
             <p>Lorem ipsum dolor sit amet, at reque nemore nec, ad quem contentiones mea, iudico invenire ocurreret mea an. Eum eu ullum equidem deseruisse. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi.</p>
             <a class="btn btn-default hidden-xs hidden-sm pdf-button" href="" role="button"><span class="resource-type">MAP</span>
-            <h4 id="button-text">Nearby Attractions</h4><div class="right-arrow"></div></a>
+            <h4 id="button-text">Nearby Attractions</h4><div class="right-arrow">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-8 -3.4 25.3 16.4" enable-background="new -8 -3.4 25.3 16.4" xml:space="preserve">
+            <polygon fill="#939598" points="7.1,-1.9 13.3,3.8 -8,3.8 -8,5.8 13.3,5.8 7.1,11.5 8.5,13 17.3,4.8 8.5,-3.4 "/>
+            </svg>
+          </div></a>
             <a class="btn btn-default hidden-xs hidden-sm pdf-button" href="" role="button"><span class="resource-type">PDF</span>
-            <h4 id="button-text">Lorem Ipsum</h4><div class="right-arrow"></div></a>  
+            <h4 id="button-text">Lorem Ipsum</h4><div class="down-arrow">
+             <svg version="1.1" id="down-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-13 -7.3 16.4 25.3" enable-background="new -13 -7.3 16.4 25.3" xml:space="preserve">
+               <polygon fill="#939598" points="1.9,7.8 -3.8,14 -3.8,-7.3 -5.8,-7.3 -5.8,14 -11.5,7.8 -13,9.2 -4.8,18 3.4,9.2 "/>
+          </div></a>  
           </div>
         </div>
       </div>   
