--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Schedule | PAEA 2016 Stakeholder Summit</title>
+    <title>FAQ | PAEA 2016 Stakeholder Summit</title>
 
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -41,7 +41,7 @@
            <ul class="nav navbar-nav navbar-right">
              <li><a href="about.html">About the Summit</a></li>
              <li><a href="attendees.html">For attendees</a></li>
-             <li><a href="schedule.html" id="active_page">Schedule</a></li>
+             <li><a href="schedule.html">Schedule</a></li>
              <li><a href="discussion.html">Join the Discussion</a></li>
            </ul>
          </div><!-- /.navbar-collapse -->
@@ -49,13 +49,13 @@
       </nav>
     </header>
 
-    <main id="schedule-page">
+    <main id="faq-page">
       <section>
         <div class="container">
           <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-              <h3>Schedule</h3>
-              <p id="schedule-summary">Lorem ipsum dolor sit amet, at reque nemore nec, ad quem contentiones. Vix ex prima nostrum posidonium, eum error libris ex, vis ex hinc lorem. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi.</p>
+              <h3>Frquently Asked Questions</h3>
+              <p id="faq-summary">Lorem ipsum dolor sit amet, at reque nemore nec, ad quem contentiones. Vix ex prima nostrum posidonium, eum error libris ex, vis ex hinc lorem. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi.</p>
             </div>
           </div>
         </div>
@@ -70,17 +70,10 @@
       <section>
         <div class="container">
           <div class="row">
-            <div class="schedule-item">
+            <div class="faq-item">
               <div class="col-sm-8 col-sm-offset-2">
-                <ul>
-                  <li>7:00 AM</li>
-                  <li><span class="vertical_divider"></span></li>
-                  <li>Conference Room B</li>
-                  <li><span class="vertical_divider"></span></li>
-                  <li>Breakfast Roundtable</li>
-                </ul>
-                <h3>The Top Challenges for Today's PA Educators</h3>
-                <p>Mauris fermentum a sapien sodales tempor. Fusce sed vehicula eros. Vestibulum vehicula elementum augue.</p>
+                <h3 class="question">What is the purpose of the summit?</h3>
+                <p class="answer">Mauris fermentum a sapien sodales tempor. Fusce sed vehicula eros. Vestibulum vehicula elementum augue.</p>
               </div>
             </div>
              <div class="container">
@@ -90,17 +83,10 @@
                   </div>
                 </div>
               </div>
-            <div class="schedule-item">
+            <div class="faq-item">
               <div class="col-sm-8 col-sm-offset-2">
-                <ul>
-                  <li>8:30 AM</li>
-                  <li><span class="vertical_divider"></span></li>
-                  <li>Breakout Room 3</li>
-                  <li><span class="vertical_divider"></span></li>
-                  <li>Plenary Session #1</li>
-                </ul>
-                <h3>Title for Plenary Session #1</h3>
-                <p>Lorem ipsum dolor sit amet, at reque nemore nec, ad quem contentiones. Vix ex prima nostrum posidonium, eum error libris ex, vis ex hinc lorem. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi.Mauris fermentum a sapien sodales tempor. Fusce sed vehicula eros. Vestibulum vehicula elementum augue.</p>
+                 <h3 class="question">Who is attending the summit?</h3>
+                <p class="answer">Lorem ipsum dolor sit amet, at reque nemore nec, ad quem contentiones. Vix ex prima nostrum posidonium, eum error libris ex, vis ex hinc lorem. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi.Mauris fermentum a sapien sodales tempor. Fusce sed vehicula eros. Vestibulum vehicula elementum augue.</p>
               </div>
             </div>
              <div class="container">
@@ -110,17 +96,10 @@
                   </div>
                 </div>
               </div>
-             <div class="schedule-item">
+             <div class="faq-item">
               <div class="col-sm-8 col-sm-offset-2">
-                <ul>
-                  <li>10:00 AM</li>
-                  <li><span class="vertical_divider"></span></li>
-                  <li>Breakout Room 3</li>
-                  <li><span class="vertical_divider"></span></li>
-                  <li>Plenary Session #2</li>
-                </ul>
-                <h3>Title for Plenary Session #2</h3>
-                <p>Lorem ipsum dolor sit amet, at reque nemore nec, ad quem contentiones. Vix ex prima nostrum posidonium, eum error libris ex, vis ex hinc lorem. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi.Mauris fermentum a sapien sodales tempor. Fusce sed vehicula eros. Vestibulum vehicula elementum augue.</p>
+                <h3 class="question">What will happen after the summit?</h3>
+                <p class="answer">Lorem ipsum dolor sit amet, at reque nemore nec, ad quem contentiones. Vix ex prima nostrum posidonium, eum error libris ex, vis ex hinc lorem.</p>
               </div>
             </div>
              <div class="container">
@@ -130,17 +109,10 @@
                   </div>
                 </div>
               </div>
-             <div class="schedule-item">
+             <div class="faq-item">
               <div class="col-sm-8 col-sm-offset-2">
-                <ul>
-                  <li>12:00 PM</li>
-                  <li><span class="vertical_divider"></span></li>
-                  <li>Breakout Room 3</li>
-                  <li><span class="vertical_divider"></span></li>
-                  <li>Lunch Keynote Talk</li>
-                </ul>
-                <h3>Lunch Keynote Title</h3>
-                <p>Lorem ipsum dolor sit amet, at reque nemore nec, ad quem contentiones. Vix ex prima nostrum posidonium, eum error libris ex, vis ex hinc lorem. Timeam accommodare voluptatibus an quo, ex cum latine delicatissimi.Mauris fermentum a sapien sodales tempor. Fusce sed vehicula eros. Vestibulum vehicula elementum augue.</p>
+                <h3 class="question">What are the dates of the conference?</h3>
+                <p class="answer">April 20 - 22, 2016</p>
               </div>
             </div>
         </div>
@@ -180,7 +152,7 @@
         <ul>
           <li>&copy; Physicians Assistant Education Association (PAEA)</li>
           <li class="hidden-xs hidden-sm"><a href="emailto:stakeholdersummit@paeaonline.org">stakeholdersummit@paeaonline.org</a></li>
-          <li><a href="faq.html">Frequently Asked Questions</a></li>
+          <li><a href="">Frequently Asked Questions</a></li>
         </ul>
       </div>
     </div> <!-- end container -->
