--- a/discussionDetail.html
+++ b/discussionDetail.html
@@ -59,7 +59,7 @@
       				<li>November 24, 2015</li>
       			</ul>
             <div class="col-xs-10 col-sm-10 col-xs-offset-1 col-sm-offset-1 page-subtitle">
-      			 <h2>What is the most important aspect of PA education?</h2>
+      			 <p>What is the most important aspect of PA education?</p>
             </div>
       		</div> <!-- END ROW -->
       	</div> <!-- END CONTAINER -->
