--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       				<li>30 Industry Leaders</li>
       			</ul>
             <div class="col-xs-10 col-sm-10 col-xs-offset-1 col-sm-offset-1 page-subtitle">
-      			 <h2>A convening of thought leaders and innovators to identify essential knowledge, skills and behaviors required of the <span class="accented_text">PA workforce in the future </span></h2>
+      			 <p>A convening of thought leaders and innovators to identify essential knowledge, skills and behaviors required of the <span class="accented_text">PA workforce in the future </span></p>
             </div>
             <div class="hero_btn_group">
       			 <a class="btn btn-primary btn-lg hero_btn" href="#" role="button">Video: Our Initiatives</a>
@@ -110,6 +110,19 @@
           <div class="row">
             <div class="video-container">
               <a href=""><div class="col-sm-6 video-caption">
+                <svg version="1.1" id="play-button" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="9 -25.4 61.4 61.4" enable-background="new 9 -25.4 61.4 61.4" xml:space="preserve">
+                  <g>
+                    <g>
+                      <path fill="#FFFFFF" d="M39.7-22.2c15.2,0,27.5,12.3,27.5,27.5S54.9,32.8,39.7,32.8S12.2,20.5,12.2,5.3
+                      C12.2-9.8,24.6-22.2,39.7-22.2 M39.7-25.4C22.8-25.4,9-11.6,9,5.3C9,22.3,22.8,36,39.7,36c17,0,30.7-13.8,30.7-30.7
+                      S56.7-25.4,39.7-25.4L39.7-25.4z"/>
+                        <g>
+                          <path fill="#FFFFFF" d="M47.2,2.3c2.9,1.7,2.9,4.4,0,6.1c-2.9,1.7-7.7,4.4-10.6,6.1c-2.9,1.7-5.3,0.3-5.3-3.1s0-8.9,0-12.2
+                          s2.4-4.7,5.3-3.1S44.2,0.6,47.2,2.3z"/>
+                        </g>
+                    </g>
+                  </g>
+                </svg>
                 <p>Explore the intesection between the summit and our initiatives.</p>
             </div></a>
           </div>
@@ -179,7 +192,7 @@
         <ul>
           <li>&copy; Physicians Assistant Education Association (PAEA)</li>
           <li class="hidden-xs hidden-sm"><a href="emailto:stakeholdersummit@paeaonline.org">stakeholdersummit@paeaonline.org</a></li>
-          <li><a href="">Frequently Asked Questions</a></li>
+          <li><a href="faq.html">Frequently Asked Questions</a></li>
         </ul>
       </div>
     </div> <!-- end container -->
